Refactored maven step * Added basic tests for maven step * Added gradle